<resources>
    <string name="app_name">AppLista</string>
    <string name="txt_title_name">Lista VIP</string>
    <string name="txt_hint_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_sobrenome">Sobrenome</string>
    <string name="txt_hint_nome_evento">Nome do Evento</string>
    <string name="txt_hint_telefone_contato">Telefone de Contato</string>
    <string name="txt_button_clear">LIMPAR</string>
    <string name="txt_button_save">SALVAR</string>
    <string name="txt_button_finish">FINALIZAR</string>
</resources>